pre-works